--- a/server/Gemfile
+++ b/server/Gemfile
@@ -52,3 +52,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "jwt", "~> 2.7"
 
 gem "rack-cors", "~> 2.0"
+
+gem 'crack'
